<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activities_padding"
    android:id="@+id/lytPreferencias"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_seu_tema_preferido"
        android:textStyle="bold"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgCores">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mudarCor"
            android:text="@string/vermelho"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mudarCor"
            android:text="@string/azul"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mudarCor"
            android:text="@string/verde"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:paddingTop="@dimen/elements_padding_topo"
        android:onClick="salvarPreferencias"/>

</LinearLayout>